Stop iframe overflow

--- a/_sass/mgross/main.scss
+++ b/_sass/mgross/main.scss
@@ -35,6 +35,10 @@ p {
 	text-align: justify;
 }
 
+iframe {
+	max-width: 100%;
+}
+
 pre.highlight {
 	overflow-x: auto;
 	background-color: #ddd;
